--- a/src/dashboard.ipynb
+++ b/src/dashboard.ipynb
@@ -6,19 +6,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import plotly.graph_objs as go\n",
-    "from ipywidgets import Button, HBox, VBox, Output, HTML, Layout, Tab, IntText, FloatText, BoundedFloatText, BoundedIntText, Label, Widget\n",
-    "from IPython.display import display\n",
-    "from datetime import timedelta\n",
-    "import pandas as pd\n",
+    "import json\n",
     "import logging\n",
+    "import os\n",
     "import threading\n",
     "import time\n",
-    "import json\n",
-    "from trading_algo import TradingAlgo, MovingAveragesParameter, BollingBandParameters\n",
-    "import os\n",
-    "from typing import Union\n",
     "import warnings\n",
+    "from datetime import timedelta\n",
+    "from typing import Union\n",
+    "\n",
+    "\n",
+    "import pandas as pd\n",
+    "import plotly.graph_objs as go\n",
+    "from IPython.display import display\n",
+    "from ipywidgets import (\n",
+    "    Button, HBox, VBox, Output, HTML, Layout, Tab, IntText, FloatText,\n",
+    "    BoundedFloatText, BoundedIntText, Label, Widget\n",
+    ")\n",
+    "\n",
+    "from trading_algo import TradingAlgo, MovingAveragesParameter, BollingBandParameters\n",
     "\n",
     "# Initialize logging\n",
     "logging.basicConfig(level=logging.INFO)\n",
