remove unused imports

--- a/src/dashboard.ipynb
+++ b/src/dashboard.ipynb
@@ -2,9 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a2cca4eabfa74c04ab42eb363bd7fede",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='\\n<style>\\n    body {\\n        background-color: #222222;\\n        color: #f0f0f0;\\n        font-f…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d4e902d0fcd3478596b6e94ef6dcec87",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HTML(value=\"<h3 style='color:lightgrey;'>Enter Trading Algorithm Parameters</h3>\"), HBox(childr…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import json\n",
     "import logging\n",
@@ -21,7 +50,7 @@
     "from IPython.display import display\n",
     "from ipywidgets import (\n",
     "    Button, HBox, VBox, Output, HTML, Layout, Tab, IntText, FloatText,\n",
-    "    BoundedFloatText, BoundedIntText, Label, Widget\n",
+    "    BoundedFloatText, BoundedIntText, Widget\n",
     ")\n",
     "\n",
     "from trading_algo import TradingAlgo, MovingAveragesParameter, BollingBandParameters\n",
