update max risk info

--- a/src/dashboard.ipynb
+++ b/src/dashboard.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a2cca4eabfa74c04ab42eb363bd7fede",
+       "model_id": "97348bd62edb428f85cd97e519e0a310",
        "version_major": 2,
        "version_minor": 0
       },
@@ -22,7 +22,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4e902d0fcd3478596b6e94ef6dcec87",
+       "model_id": "b022296b7bc6430cbed3417655e26ca2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -101,7 +101,7 @@
     "bollinger_period = IntText(value=13, layout=Layout(width='150px', background_color='#555555', color='white'))\n",
     "bollinger_deviation = FloatText(value=3, layout=Layout(width='150px', background_color='#555555', color='white'))\n",
     "initial_capital = IntText(value=1_000_000, layout=Layout(width='150px', background_color='#555555', color='white'))\n",
-    "max_risk = BoundedFloatText(value=0.3, min=0, max=1, step=0.01, layout=Layout(width='150px', background_color='#555555', color='white'))\n",
+    "max_risk = BoundedFloatText(value=30, min=0, max=100, step=0.01, layout=Layout(width='150px', background_color='#555555', color='white'))\n",
     "limit_order_pct = BoundedIntText(value=15, min=0, max=100, step=1, layout=Layout(width='150px', background_color='#555555', color='white'))\n",
     "execution_delay = IntText(value=500, layout=Layout(width='150px', background_color='#555555', color='white'))\n",
     "transaction_fees = FloatText(value=0.125, layout=Layout(width='150px', background_color='#555555', color='white'))\n",
@@ -339,7 +339,7 @@
     "    create_input_field(bollinger_period, 'Bollinger Period:'),\n",
     "    create_input_field(bollinger_deviation, 'Bollinger Deviation:'),\n",
     "    create_input_field(initial_capital, 'Initial Capital:'),\n",
-    "    create_input_field(max_risk, 'Max Risk:'),\n",
+    "    create_input_field(max_risk, 'Max Portfolio Risk %:'),\n",
     "    create_input_field(limit_order_pct, 'Limit Order %:'),\n",
     "    create_input_field(execution_delay, 'Execution Delay (ms):'),\n",
     "    create_input_field(transaction_fees, 'Transaction Fees Per Contract:'),\n",
