add some clarifications in the dashboard

--- a/src/dashboard.ipynb
+++ b/src/dashboard.ipynb
@@ -104,7 +104,7 @@
     "max_risk = BoundedFloatText(value=30, min=0, max=100, step=0.01, layout=Layout(width='150px', background_color='#555555', color='white'))\n",
     "limit_order_pct = BoundedIntText(value=15, min=0, max=100, step=1, layout=Layout(width='150px', background_color='#555555', color='white'))\n",
     "execution_delay = IntText(value=500, layout=Layout(width='150px', background_color='#555555', color='white'))\n",
-    "transaction_fees = FloatText(value=0.125, layout=Layout(width='150px', background_color='#555555', color='white'))\n",
+    "transaction_fees = FloatText(value=0.01, layout=Layout(width='150px', background_color='#555555', color='white'))\n",
     "\n",
     "# Start button to initialize the trading algorithm\n",
     "start_button = Button(description=\"Start Trading\", button_style='success', tooltip=\"Initialize Trading Algorithm\")\n",
@@ -333,10 +333,10 @@
     "# Set up front page with input fields\n",
     "input_layout = VBox([\n",
     "    HTML(\"<h3 style='color:lightgrey;'>Enter Trading Algorithm Parameters</h3>\"),\n",
-    "    create_input_field(ma1, 'MA1:'),\n",
-    "    create_input_field(ma2, 'MA2:'),\n",
-    "    create_input_field(ma3, 'MA3:'),\n",
-    "    create_input_field(bollinger_period, 'Bollinger Period:'),\n",
+    "    create_input_field(ma1, 'Short Moving Average Rolling Window:'),\n",
+    "    create_input_field(ma2, 'Medium Moving Average Rolling Window:'),\n",
+    "    create_input_field(ma3, 'Long Moving Average Rolling Window:'),\n",
+    "    create_input_field(bollinger_period, 'Bollinger Rolling Period:'),\n",
     "    create_input_field(bollinger_deviation, 'Bollinger Deviation:'),\n",
     "    create_input_field(initial_capital, 'Initial Capital:'),\n",
     "    create_input_field(max_risk, 'Max Portfolio Risk %:'),\n",
